Fixed spacing

--- a/Website/style/mainStyle.css
+++ b/Website/style/mainStyle.css
@@ -23,7 +23,7 @@ body {
 
 /*Other Stuff*/
 .fullPage{
-  padding-top: 20%;
+  padding-top: 15%;
   padding-bottom: 15%;
   padding-left: 10%;
   padding-right: 10%;
